--- a/3.html
+++ b/3.html
@@ -45,7 +45,7 @@
 									<hr class="major" />
 
 									<h2>👉 Mitmachen und ausprobieren</h2>
-									<p>Du ahnst sicherlich schon, was Deine Aufgabe sein wird ;-) <br>Richte Dir einen Benutzeraccount ein.</p> 
+									<p>Du ahnst sicherlich schon, was Deine Aufgabe sein wird ;-) <br>Richte Dir <a href="https://de.wikipedia.org/wiki/Spezial:Benutzerkonto_anlegen?campaign=WMDE_wikipediastart" target="blank">hier</a> einen Benutzeraccount ein.</p> 
 <p>
 Danach geht es weiter mit <a href="4.html">Lerneinheit 4</a>, um Deine Benutzerseite anzulegen und auszufüllen.
 </p>   
