--- a/impressum.html
+++ b/impressum.html
@@ -46,7 +46,7 @@
 
 <br>Fax: +49 (0)30-577 11 62-99
 </p>
-<p>Geschäftsführender Vorstand: Dr. Christian Humborg
+<p>Geschäftsführende Vorstände: Franziska Heine, Dr. Christian Humborg
 <br>
 Eingetragen im Vereinsregister des Amtsgerichts Charlottenburg, VR 23855. 
 <br>
@@ -54,7 +54,7 @@ Umsatzsteuer-ID: DE263757776
 </p><p>
 Inhaltlich Verantwortlicher gemäß § 55 Abs. 2
 <br>
-RStV: Dr. Christian Humborg (Anschrift wie oben).
+RStV: Franziska Heine, Dr. Christian Humborg (Anschrift wie oben).
 </p>
 
 <h3>Büro</h3>
