--- a/3.html
+++ b/3.html
@@ -100,7 +100,7 @@ Danach geht es weiter mit <a href="4.html">Lerneinheit 4</a>, um Deine Benutzers
 										<h2>Hintergrund</h2>
 									</header>
 									<p>
-Dieser Kurs ermöglicht die Gestaltung von Online-Workshops zum Einstieg in die Wikipedia. Er wurde von <a href="https://www.wikimedia.de/" target="blank">Wikimedia Deutschland e.V.</a> gemeinsam mit dem <a href="https://ebildungslabor.de" target="blank">eBildunglabor</a> entwickelt und ist Bestandteil des <a href="https://de.wikipedia.org/wiki/Wikipedia:TrainingsKit" target="blank">Wikipedia-Trainingskit</a>. Schreibe uns eine <a href="mailto:mitmachen@wikimedia.de">E-Mail</a>, wenn du Feedback oder Verbesserungsvorschläge hast. Ankündigungen aktueller Treffen und Veranstaltungen von Wikipedianer*innen findest Du im <a href="https://de.wikipedia.org/wiki/Wikipedia:Treffen_der_Wikipedianer" target="blank">Terminkalender</a></p>
+Dieser Kurs ermöglicht die Gestaltung von Online-Workshops zum Einstieg in die Wikipedia. Er wurde von <a href="https://www.wikimedia.de/" target="blank">Wikimedia Deutschland e.V.</a> gemeinsam mit dem <a href="https://ebildungslabor.de" target="blank">eBildunglabor</a> entwickelt und ist Bestandteil des <a href="https://de.wikipedia.org/wiki/Wikipedia:TrainingsKit" target="blank">Wikipedia-Trainingskit</a>. Schreibe uns eine <a href="mailto:mitmachen@wikimedia.de">E-Mail</a>, wenn du Feedback oder Verbesserungsvorschläge hast. Ankündigungen aktueller Treffen und Veranstaltungen von Wikipedianer*innen findest Du im <a href="https://de.wikipedia.org/wiki/Wikipedia:Treffen_der_Wikipedianer" target="blank">Terminkalender</a>.</p>
 									
 								</section>
 
