Replaced the video source with Wikimedia Commons

--- a/7.html
+++ b/7.html
@@ -43,7 +43,7 @@
 
 <p>Die folgende Gesprächsrunde haben wir im Mai 2020 aufgezeichnet. Wikipedianer berichten darin über ihre Erfahrungen in der Wikipedia und über Tipps zum Einstieg.</p>
 <p> <video width="80%" controls>
-      <source src="https://ebildungslabor.de/sub/wikipedia.mp4" type="video/mp4">
+      <source src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Wikipedia-Gepflogenheiten.webm" type="video/webm">
           Your browser does not support HTML5 video.
     </video>
 
